[metadata]
name = monitoring-for-openstack
version = 1
summary = OpenStack monitoring tools
description-file =
    README.rst
author = eNovance
author-email = techs@enovance.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oschecks

scripts = 
    legacy/oschecks-check_horizon_login
    legacy/oschecks-check_swift
    legacy/oschecks-check_swift_dispersion
    legacy/oschecks-check_swift_object_servers
    legacy/oschecks-check_swift_recon
    legacy/oschecks-check_swift_ring_usage

[entry_points]
console_scripts =
    oschecks-check_amqp = oschecks.amqp:main
    oschecks-check_ceilometer_api = oschecks.ceilometer:check_ceilometer_api
    oschecks-check_ceph_df = oschecks.ceph:check_ceph_df
    oschecks-check_ceph_health = oschecks.ceph:check_ceph_health
    oschecks-check_cinder_api = oschecks.cinder:check_cinder_api
    oschecks-check_cinder_volume = oschecks.cinder:check_cinder_volume
    oschecks-check_glance_api = oschecks.glance:check_glance_api
    oschecks-check_glance_image_exists = oschecks.glance:check_glance_image_exists
    oschecks-check_glance_upload = oschecks.glance:check_glance_upload
    oschecks-check_keystone_api = oschecks.keystone:check_keystone_api
    oschecks-check_neutron_api = oschecks.neutron:check_neutron_api
    oschecks-check_neutron_floating_ip = oschecks.neutron:check_neutron_floating_ip
    oschecks-check_nova_api = oschecks.nova:check_nova_api
    oschecks-check_nova_instance = oschecks.nova:check_nova_instance
    oschecks-pacemaker_host_check = oschecks.pacemaker_host_check:pacemaker_host_check

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
